Fix inline img size and alignment

--- a/public/latex.css
+++ b/public/latex.css
@@ -729,3 +729,8 @@ h5,
 h6 {
   margin-bottom: 0.8rem;
 }
+
+p img {
+  height: 1em;
+  display: inline;
+}
